--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -21,3 +21,50 @@
 .pageLinks {
     text-align: center;
 }
+
+body, html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+}
+
+.leftpane {
+    width: 15%;
+    height: 100%;
+    float: left;
+    background-color: black;
+    border-collapse: collapse;
+}
+
+.middlepane {
+    width: 70%;
+    height: 100%;
+    float: left;
+    /*background-color: royalblue;*/
+    border-collapse: collapse;
+}
+
+.rightpane {
+    width: 15%;
+    height: 100%;
+    position: relative;
+    float: right;
+    background-color: black;
+    border-collapse: collapse;
+}
+
+#mainContainer {
+
+}
+/*
+.toppane {
+    width: 100%;
+    height: 100px;
+    border-collapse: collapse;
+    background-color: #4da6ff;
+}*/
