--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -1,6 +1,16 @@
 .pos-f-t #bar{
     text-align: center;
     width: 100%;
+    background-color: #1D3A56;
+}
+
+.navbarContent {
+    background-color: #1D3A56;
+    padding-top: 30px;
+}
+
+#littleBar {
+    background-color: #1D3A56;
 }
 
 #nameRow {
@@ -26,6 +36,7 @@ body, html {
     width: 100%;
     height: 100%;
     margin: 0;
+    background-color: #1D3A56;
 }
 
 .container {
@@ -45,7 +56,7 @@ body, html {
     width: 70%;
     height: 100%;
     float: left;
-    /*background-color: royalblue;*/
+    background-color: #0f283f;
     border-collapse: collapse;
 }
 
@@ -59,7 +70,7 @@ body, html {
 }
 
 #mainContainer {
-
+    max-width: 10000px;
 }
 /*
 .toppane {
