--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -48,7 +48,7 @@ body, html {
     width: 15%;
     height: 100%;
     float: left;
-    background-color: black;
+    background-color: #1D3A56;
     border-collapse: collapse;
 }
 
@@ -56,8 +56,9 @@ body, html {
     width: 70%;
     height: 100%;
     float: left;
-    background-color: #0f283f;
+    background-color: white;
     border-collapse: collapse;
+    color: white;
 }
 
 .rightpane {
@@ -65,8 +66,23 @@ body, html {
     height: 100%;
     position: relative;
     float: right;
-    background-color: black;
+    background-color: #1D3A56;
     border-collapse: collapse;
+}
+
+.mainText {
+  text-align: justify;
+  padding: 20px 50px;
+  color: #61615F;
+}
+
+.mainHeading {
+  font-weight: bold;
+  padding: 10px 40px;
+}
+
+.mainParagraph {
+  font-size: 13px;
 }
 
 #mainContainer {
