--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -14,8 +14,8 @@
 }
 
 #nameRow {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 0px;
+    margin-right: 0px;
     margin-top: 15px;
     width: 100%;
 }
@@ -88,10 +88,19 @@ body, html {
 #mainContainer {
     max-width: 10000px;
 }
-/*
-.toppane {
-    width: 100%;
-    height: 100px;
-    border-collapse: collapse;
-    background-color: #4da6ff;
-}*/
+
+#bottomBar {
+    background-color: #1D3A56;
+    padding: 20px;
+}
+
+.img-responsive {
+    text-align: center;
+    max-height: 125px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.imgHolder {
+    text-align: center;
+}
