--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -104,3 +104,26 @@ body, html {
 .imgHolder {
     text-align: center;
 }
+
+/* Creates centered image*/
+.imgCenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+/* Resizes image according to browser size*/
+.imgResizeAndBorder{
+    height: 30%;
+    width: 30%;
+    border: 5px solid gray;
+    border-radius: 30%;
+    -webkit-border-radius: 30%;
+    -moz-border-radius: 30%;
+}
+
+/* Indents paragraph*/
+.tab{
+    text-indent: 5%;
+}
