--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -102,7 +102,7 @@ hr {
 
 .mainText {
     text-align: justify;
-    padding: 0px 50px;
+    padding: 15px 50px;
     color: #61615F;
     font-family: orkney_reg;
 }
@@ -112,8 +112,10 @@ hr {
     padding: 10px 40px;
 }
 
-.mainParagraph {
-    font-size: 13px;
+#aboutPiya {
+    font-size: 17px;
+    margin-right: 15px;
+    margin-left: 5px;
 }
 
 .names {
@@ -177,6 +179,8 @@ hr {
 
 .ourPics {
     padding: 10px 40px 10px 40px;
+    width: 50%;
+    height: 50%;
 }
 
 .us {
@@ -186,6 +190,43 @@ hr {
 
 
 /*------------------------------------------------------------*/
+
+/*----------------- Section Menu ----------------------------*/
+.sectionMenu {
+}
+
+/*------------------------------------------------------------*/
+
+/*------------------- About Piyawat --------------------------*/
+#profilePic {
+  float: left;
+  align-items: center;
+  height: inherit;
+  border: none;
+  width: 200px;
+  margin: 25px;
+
+}
+
+#piyaLink {
+  color: inherit;
+}
+
+
+#piyaLink:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.contentBox {
+  background-color: #F0F0F0;
+  width: auto;
+  overflow: auto;
+  padding: 10px 7px 15px 10px;
+}
+
+/*------------------------------------------------------------*/
+
 
 /*------------------ Random Make it Work ---------------------*/
 /* Indents paragraph*/
