--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -8,7 +8,17 @@
 
 .navbarContent {
     background-color: #1D3A56;
-    padding-top: 30px;
+    padding-top: 10px;
+}
+
+.navBarImg {
+  width: 150px;
+  height: 100px;
+  margin: 10px;
+  border: 5px solid #EDEDED;
+  border-radius: 10%;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
 }
 
 /*------------------------------------------------------------*/
@@ -35,16 +45,17 @@
     src: url("fonts/orkneyBold.woff");
 }
 
-#guyName {
+#projectName {
     font-family: orkney_bold;
     font-weight: bold;
-    color: #cbc1c8;
-    font-size: 20px;
+    color: #EDEDED;
+    font-size: 23px;
     text-align: center;
 }
 
-#guyName:hover {
+#projectName:hover {
   text-decoration: none;
+  opacity: 0.9;
 }
 
 /*------------------------------------------------------------*/
@@ -72,6 +83,10 @@ hr {
 
 
 /*--- Window Pane Division ---*/
+.panes {
+  height: auto;
+}
+
 .leftpane {
     width: 15%;
     height: 100%;
@@ -97,6 +112,9 @@ hr {
     border-collapse: collapse;
 }
 
+.rightpane .leftpane {
+  opacity: 1%;
+}
 /*------------------------------------------------------------*/
 
 
@@ -107,10 +125,10 @@ hr {
     src: url("fonts/orkneyRegular.woff");
 }
 
-.mainText {
+#mainText {
     text-align: justify;
     padding: 15px 50px;
-    color: #575755;
+    color: #474746;
     font-family: orkney_reg;
     font-weight: lighter;
 }
