--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -1,6 +1,6 @@
 /*------------------- Nav Bar Management ---------------------*/
 
-.pos-f-t #bar {
+.pos-f-t #navbar {
     text-align: center;
     width: 100%;
     background-color: #1D3A56;
@@ -32,9 +32,7 @@
 
 /*Row with the name of the project*/
 #projectRow {
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 15px;
+    margin-top: 40px;
     width: 100%;
     height: 70px;
 }
@@ -225,7 +223,11 @@ hr {
 /*----------------- Section Menu ----------------------------*/
 
 #sectionMenuHolder {
-  padding: 20px;
+  padding-top: 0px;
+}
+
+.menuPics {
+    border: 1px solid black;
 }
 
 /*------------------------------------------------------------*/
@@ -236,7 +238,7 @@ hr {
   vertical-align: middle;
   height: inherit;
   border: none;
-  width: 200px;
+  max-width: 200px;
   margin: 25px;
 
 }
