--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -98,6 +98,7 @@ hr {
     float: left;
     background-color: white;
     border-collapse: collapse;
+    border-radius: 5px;
     color: white;
 }
 
@@ -243,12 +244,24 @@ li {
 
 /*----------------- Section Menu ----------------------------*/
 
+#browsingTitle {
+  color: #474746;
+  font-size: 23px;
+  text-align: center;
+}
+
+
 #sectionMenuHolder {
   padding-top: 0px;
+  width: 75%;
+  margin: auto;
+
 }
 
 .menuPics {
-    border: 1px solid black;
+    border: 1px solid #EDEDED;
+    width: 100%;
+    height: 200px;
 }
 
 /*------------------------------------------------------------*/
