--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -136,7 +136,7 @@ hr {
     text-align: center;
 }
 
-p {
+p, b {
     font-family: orkney_reg;
     color: black;
 }
@@ -277,12 +277,12 @@ li {
 
 }
 
-#piyaLink {
-  color: inherit;
+.piyaLink {
+  color: grey;
 }
 
 
-#piyaLink:hover {
+.piyaLink:hover {
   color: black;
   text-decoration: none;
 }
