--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -12,8 +12,8 @@
 }
 
 .navBarImg {
-  width: 150px;
-  height: 100px;
+  max-width: 150px;
+  max-height: 100px;
   margin: 10px;
   border: 5px solid #EDEDED;
   border-radius: 10%;
@@ -260,8 +260,8 @@ li {
 
 .menuPics {
     border: 1px solid #EDEDED;
-    width: 100%;
-    height: 200px;
+    /*width: 100%;
+    height: 200px;*/
 }
 
 /*------------------------------------------------------------*/
