--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -229,7 +229,7 @@ li {
 }
 
 .ourPics {
-    padding: 10px 40px 10px 40px;
+    padding: 10px 30px 10px 30px;
     width: 50%;
     height: 50%;
 }
@@ -262,6 +262,10 @@ li {
     border: 1px solid #EDEDED;
     /*width: 100%;
     height: 200px;*/
+}
+
+.col-sm-4 {
+    text-align: center;
 }
 
 /*------------------------------------------------------------*/
