--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -239,6 +239,9 @@ li {
     border: 3px solid #1D3A56;
 }
 
+.examples {
+    padding: 15px;
+}
 
 /*------------------------------------------------------------*/
 
