--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -31,7 +31,7 @@
 }
 
 /*Row with the name of the project*/
-#projectRow {
+#projectRow{
     margin-top: 40px;
     width: 100%;
     height: 70px;
@@ -261,10 +261,22 @@ li {
 
 }
 
+#sectionMenu:hover #menuAppears {
+  opacity: 1;
+}
+
 .menuPics {
     border: 1px solid #EDEDED;
-    /*width: 100%;
-    height: 200px;*/
+    position: relative;
+}
+
+.menuAppears {
+  position: absolute;
+  opacity: 0;
+  top: 15%;
+  left: 40%;
+  font-size: 120px;
+  color: white;
 }
 
 .col-sm-4 {
@@ -312,7 +324,7 @@ li {
 }
 
 .highlightImage {
-  width: 100px;
+  width: 150px;
   height: 100px;
   opacity: 0.4;
   border-radius: 10px;
@@ -324,8 +336,9 @@ li {
 }
 
 .arrow {
-  opacity: 0.8;
+  opacity: 0.5;
   width: 70px;
+  height: 45px;
 }
 
 /*------------------------------------------------------------*/
