No errors in validation

--- a/piyawatStyles.css
+++ b/piyawatStyles.css
@@ -359,4 +359,8 @@ table, th, td {
   border-collapse: collapse;
 }
 
+#iclLogo {
+  text-align: center;
+}
+
 /*------------------------------------------------------------*/
